# spawn

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  Package.resolved  Package.swift  README.md
Sources/: BuildCommand.swift  CLI.swift  ContainerRunner.swift  ContainerfileTemplates.swift  DevcontainerParser.swift  DoctorCommand.swift  EnvLoader.swift  ExecCommand.swift  ImageChecker.swift  ImageCommand.swift  ImageResolver.swift  ImagesCommand.swift  ListCommand.swift  Log.swift  ManagedImagePolicy.swift  MountResolver.swift  Paths.swift  RunCommand.swift  RunLaunchResolver.swift  RunLaunchSummary.swift  RunRuntimePolicy.swift  SettingsSeeder.swift  ShellCommand.swift  SpawnError.swift  StopCommand.swift  ToolchainDetector.swift  Types.swift  WorkspaceImageRuntime.swift
Tests/: BuildCommandTests.swift  CLIHelpTests.swift  CLIParsingTests.swift  ContainerRunnerTests.swift  ContainerfileTemplatesTests.swift  DevcontainerParserTests.swift  DoctorCommandTests.swift  EnvLoaderTests.swift  ImageCheckerTests.swift  ImageCommandTests.swift  ImageResolverTests.swift  IntegrationTests.swift  ManagedImagePolicyTests.swift  MountResolverTests.swift  PathsTests.swift  Placeholder.swift  RunCommandTests.swift  SettingsSeederTests.swift  SpawnErrorTests.swift  TestHelpers.swift  ToolchainDetectorTests.swift  TypesTests.swift  WorkspaceImageRuntimeTests.swift
docs/: _config.yml  architecture.md  authentication.md  getting-started.md  index.md  permissions.md  toolchains.md  usage.md
fixtures/cpp-sample/: CMakeLists.txt  greet.cpp  greet.h  main.cpp  main_test.cpp
(+32 files in other folders)
